[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/actors/scripts/Enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/fieldOfView.png" type="Texture" id=3]
[ext_resource path="res://assets/warning.png" type="Texture" id=4]
[ext_resource path="res://assets/danger.png" type="Texture" id=5]
[ext_resource path="res://src/animations/patrol_E.tres" type="Animation" id=6]
[ext_resource path="res://src/animations/patrol_W.tres" type="Animation" id=7]
[ext_resource path="res://src/animations/turn_EtoW.tres" type="Animation" id=8]
[ext_resource path="res://src/animations/turn_WtoE.tres" type="Animation" id=9]
[ext_resource path="res://src/animations/smoking-idle-E.tres" type="Animation" id=10]
[ext_resource path="res://src/animations/smoking-idle-W.tres" type="Animation" id=11]
[ext_resource path="res://src/actors/scripts/Enemy/EnemyFSM.gd" type="Script" id=12]
[ext_resource path="res://src/actors/scripts/Enemy/States/Patrolling.gd" type="Script" id=13]
[ext_resource path="res://src/actors/scripts/Enemy/States/Searching.gd" type="Script" id=14]
[ext_resource path="res://src/actors/scripts/Enemy/States/Idle.gd" type="Script" id=15]
[ext_resource path="res://src/actors/scripts/Enemy/States/Alerted.gd" type="Script" id=16]
[ext_resource path="res://src/actors/scripts/Enemy/EnemyController.gd" type="Script" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 44.0
height = 96.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.0
height = 80.0

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 12
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -96 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -92 )
z_index = 1
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -3.63798e-12, -121 )
scale = Vector2( 80, 12 )

[node name="PlayerDetector" type="Area2D" parent="." groups=[
"Enemy",
]]
collision_layer = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, -93 )
shape = SubResource( 2 )

[node name="castOrigin" type="Position2D" parent="."]
position = Vector2( 0, -144 )

[node name="castPoint" type="Position2D" parent="castOrigin"]
position = Vector2( 64, 0 )

[node name="fieldOfView" type="Area2D" parent="castOrigin" groups=[
"EnemySight",
]]
position = Vector2( 48, 0 )
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="castOrigin/fieldOfView"]
polygon = PoolVector2Array( 0, 0, 400, -200, 400, 200 )

[node name="Sprite" type="Sprite" parent="castOrigin/fieldOfView"]
position = Vector2( 210, 0.5 )
scale = Vector2( 1.5, 1.4 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -81.3544
margin_top = -222.655
margin_right = -0.354431
margin_bottom = -208.655
rect_scale = Vector2( 2, 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warningSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -256 )
texture = ExtResource( 4 )

[node name="dangerSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -256 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/patrol_E = ExtResource( 6 )
anims/patrol_W = ExtResource( 7 )
anims/smoking_E = ExtResource( 10 )
anims/smoking_W = ExtResource( 11 )
anims/turn_E = ExtResource( 8 )
anims/turn_W = ExtResource( 9 )

[node name="alertTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="RayCasts" type="Node2D" parent="."]

[node name="leftBorder" type="RayCast2D" parent="RayCasts"]
position = Vector2( -48, 0 )
enabled = true
collision_mask = 4

[node name="rightBorder" type="RayCast2D" parent="RayCasts"]
position = Vector2( 50, 0 )
enabled = true
collision_mask = 4

[node name="bottomRightRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -56 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 4

[node name="bottomLeftRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -56 )
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 4

[node name="topRightRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -128 )
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 4

[node name="topLeftRC" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -128 )
enabled = true
cast_to = Vector2( -150, 0 )
collision_mask = 4

[node name="EnemyController" type="Node" parent="."]
script = ExtResource( 17 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Alerted" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Patrolling" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Searching" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
[connection signal="on_idle_anim_finished" from="." to="StateMachine/Idle" method="_on_idle_anim_finished"]
[connection signal="on_player_contact" from="." to="StateMachine" method="_on_player_contact"]
[connection signal="on_player_detected" from="." to="StateMachine" method="_on_player_detected"]
[connection signal="on_player_exited" from="." to="StateMachine" method="_on_player_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="castOrigin/fieldOfView" to="." method="_on_fieldOfView_body_entered"]
[connection signal="body_exited" from="castOrigin/fieldOfView" to="." method="_on_fieldOfView_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="alertTimer" to="." method="_on_Timer_timeout"]
